refactor(roles): resolve SonarCloud warnings
Use Stream.toList() over Collectors.toList(), extract the role-delete loop
bodies into methods to drop the double continue, and clean up redundant test
annotations and an unreachable checked exception. No behaviour change.